fix screen exp collapse when empty

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
 
 .screen {
     padding: 5px;
+    height: 230px;
     /* background-color: red; */
 }
 
